[project]
name = "auto-vstore-alt-precos"
version = "0.1.0"
description = "Automação web para processos do Visual Store - Alteração de Ofertas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "selenium>=4.27.1",
    "webdriver-manager>=4.0.2",
]
